[package]
name = "ack-parser"
version = "0.1.0"
authors = ["Yulong Wu <yulong@aion.network>"]

[dependencies]
ethcore-transaction = { path = "../../ethcore/transaction" }
ethereum-types = { path = "../../external/ethereum-types" }
ethcore-bytes = { path = "../../util/bytes" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2.0.1"