[package]
name = "ack-parser"
version = "0.1.0"
authors = ["Yulong Wu <yulong@aion.network>"]

[dependencies]
acore-transaction = { path = "../../core/transaction" }
aion-types = { path = "../../util/aion-types" }
acore-bytes = { path = "../../util/bytes" }
blake2b = { path = "../../util/blake2b" }
crypto = { path = "../../util/crypto" }
rlp = { path = "../../util/rlp" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2.0.1"
rand = "0.5.5"